--- a/.gitlab/stages/20-unit.yml
+++ b/.gitlab/stages/20-unit.yml
@@ -174,6 +174,44 @@ PHP unit coverage:
           coverage_format: cobertura
           path: cobertura.xml
 
+PHP migration coverage:
+    extends: .base-no-setup
+    image: shopware/development:7.4-composer-2
+    stage: unit
+    needs: []
+    timeout: 10m
+    services:
+        -   name: mariadb:10.4
+            alias: database
+            entrypoint: [ "sh", "-c", "docker-entrypoint.sh $MYSQL_CMD" ]
+    variables:
+        APP_ENV: "test"
+        FEATURE_ALL: "false"
+    rules:
+        - !reference [.rules, skip]
+        - !reference [.rules, run]
+        - when: always
+    before_script:
+        - composer install --optimize-autoloader --no-interaction --quiet
+    script:
+        - PHP_OPTIONS="-d pcov.enabled=1 -d pcov.directory=$PWD/src -d pcov.exclude='~(vendor|Test|node_modules)~'"
+        - php $PHP_OPTIONS vendor/bin/phpunit
+            --configuration tests/migration/phpunit.xml
+            --log-junit phpunit.junit.xml
+            --testsuite migration-tests
+            --coverage-text
+            --coverage-cobertura cobertura.xml | sed -E -n '1,/^\s*Lines:\s*([0-9]+(\.[0-9]+)?)%/ p' # do not output covered files lines
+    coverage: '/^\s*Lines:\s*(\d+(?:\.\d+)?%)/'
+    artifacts:
+      when: always
+      paths:
+        - cobertura.xml
+      reports:
+        junit: phpunit.junit.xml
+        coverage_report:
+          coverage_format: cobertura
+          path: cobertura.xml
+
 PHP Full:
     extends: .long-running
     image: $DEV_IMAGE
@@ -191,7 +229,7 @@ PHP Full:
         -   name: redis
             alias: redis
     variables:
-        TEST_SUITES: "docs administration storefront checkout content framework profiling system elasticsearch unit integration migration"
+        TEST_SUITES: "docs administration storefront checkout content framework profiling system elasticsearch unit integration migration migration-tests"
         APP_ENV: test
         GIT_DEPTH: 0 # we need all commits for composer to detect the version which is then checked in a unit test
         RUNNER_INSTANCE_TYPE: m5.large
