NEXT-22672 - Add scheduled task should run

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -251,3 +251,8 @@ services:
         class: Shopware\Core\DevOps\StaticAnalyze\PHPStan\Rules\Tests\CoversAnnotationRule
         tags:
             - phpstan.rules.rule
+
+    -
+        class: Shopware\Core\DevOps\StaticAnalyze\PHPStan\Rules\ScheduledTaskTooLowIntervalRule
+        tags:
+            - phpstan.rules.rule
