NEXT-22687 - Ensure that primary mysql node is used on write operations

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -133,7 +133,7 @@ parameters:
         # Class behind feature flag - can be removed with feature flag
         - '#Shopware\\Core\\Framework\\Api\\Sync\\SyncBehavior#'
         -
-            message: '#^Parameter \#2 \$success of class Shopware\\Core\\Framework\\Api\\Sync\\SyncResult constructor expects bool, array given\.$#'
+            message: '#^Parameter \#2 \$success of class Shopware\\Core\\Framework\\Api\\Sync\\SyncResult constructor expects bool, array<string, array<int, mixed>> given\.$#'
             path: src/Core/Framework/Api/Sync/SyncService.php
         # can be removed with feature flag FEATURE_NEXT_12455
         -
