NEXT-22446 - Enable plugins to load openapi schemas

--- a/.gitlab/stages/20-unit.yml
+++ b/.gitlab/stages/20-unit.yml
@@ -158,7 +158,7 @@ PHP unit coverage:
         - PHP_OPTIONS="-d pcov.enabled=1 -d pcov.directory=$PWD/src -d pcov.exclude='~(vendor|node_modules)~'"
         - php $PHP_OPTIONS vendor/bin/phpunit
             --configuration phpunit.xml.dist
-            --bootstrap vendor/autoload.php
+            --bootstrap tests/unit/php/Common/UnitTestBootstrap.php
             --log-junit phpunit.junit.xml
             --testsuite unit
             --coverage-text
