--- a/.gitlab/lib/scripts.yml
+++ b/.gitlab/lib/scripts.yml
@@ -2,13 +2,15 @@
   # install node $NODE_VERSION
   install-node:
       script:
-        - curl https://get.volta.sh | bash
-        - export PATH="~/.volta/bin:$PATH"
-        - volta install "node@$NODE_VERSION"
-        - 'rm /usr/bin/{npm,node,npx}'
-        - ln -s ~/.volta/bin/node /usr/bin/node
-        - ln -s ~/.volta/bin/npm /usr/bin/npm
-        - ln -s ~/.volta/bin/npx /usr/bin/npx
+        - export NODE_VERSION="${NODE_VERSION:-16}"
+        - export NVM_DIR=/opt/nvm
+        # found no way to automatically load shell initialization scripts in gitlab
+        - bash -c '\. "$NVM_DIR/nvm.sh" && nvm install $NODE_VERSION'
+        - bash -c '\. "$NVM_DIR/nvm.sh" && nvm use $NODE_VERSION'
+        - rm /usr/bin/{npm,node,npx}
+        - ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/node /usr/bin/node
+        - ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/npm /usr/bin/npm
+        - ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/npm /usr/bin/npx
         - npm config set --global user 0
         - npm config set --global unsafe-perm true
         - node --version
@@ -17,7 +19,6 @@
         - >
           if [[ $CI_JOB_STATUS == 'failed' && $CI_MERGE_REQUEST_EVENT_TYPE == "merge_train" && "$ALLOW_FAILURE" != "true" && -n "$CI_MERGE_REQUEST_IID" ]]; then
             apk add jq || true
-            apt-update && apt-get install -y jq || true
             LABEL="${CI_JOB_STAGE}::all";
             COMMENT="The job $CI_JOB_URL failed in the merge train. We've added the label '$LABEL' to make sure it's not caused by your MR";
             MR_API_URL="${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/merge_requests/${CI_MERGE_REQUEST_IID}";
