--- a/.gitlab/stages/20-unit.yml
+++ b/.gitlab/stages/20-unit.yml
@@ -330,5 +330,5 @@ PHP Full quarantined:
               FEATURE_ALL: 'false'
               ALLOW_FAILURE: 'true'
     script:
-      - composer run phpunit -- --group=quarantined --log-junit phpunit.$SUITE.junit.xml --colors=never
+      - composer run phpunit -- --group=quarantined --log-junit phpunit.quarantined.junit.xml --colors=never
     after_script: []
