--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ Thumbs.db
 # PhpStorm-Project
 /.idea/
 /.fleet/
+/*.http
 
 # Composer
 /composer.phar
@@ -87,6 +88,7 @@ src/Core/DevOps/Locust/fixtures/*
 src/Core/DevOps/Locust/env.json
 src/Core/DevOps/Locust/**/__pycache__/
 /.shopware-project.yml
+/.tinkerwell
 
 .php-cs-fixer.cache
 
