NEXT-22873 - Adjust nvm installation process

--- a/.gitlab/lib/scripts.yml
+++ b/.gitlab/lib/scripts.yml
@@ -6,11 +6,12 @@
         - export NVM_DIR=/opt/nvm
         # found no way to automatically load shell initialization scripts in gitlab
         - bash -c '\. "$NVM_DIR/nvm.sh" && nvm install $NODE_VERSION'
+        - rm -f /usr/bin/{npm,node,npx}
+        - VERSION_DIRS=($NVM_DIR/versions/node/v$NODE_VERSION*)
+        - ln -s "${VERSION_DIRS[-1]}/bin/node" /usr/bin/node
+        - ln -s "${VERSION_DIRS[-1]}/bin/npm" /usr/bin/npm
+        - ln -s "${VERSION_DIRS[-1]}/bin/npm" /usr/bin/npx
         - bash -c '\. "$NVM_DIR/nvm.sh" && nvm use $NODE_VERSION'
-        - rm /usr/bin/{npm,node,npx}
-        - ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/node /usr/bin/node
-        - ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/npm /usr/bin/npm
-        - ln -s $NVM_DIR/versions/node/v$NODE_VERSION*/bin/npm /usr/bin/npx
         - npm config set --global user 0
         - npm config set --global unsafe-perm true
         - node --version
