NEXT-23037 - Prepare 6.4.15.0 release

--- a/composer.json
+++ b/composer.json
@@ -438,5 +438,6 @@
             "Shopware\\Tests\\Bench\\": "tests/performance/bench/",
             "Shopware\\Tests\\Migration\\": "tests/migration/"
         }
-    }
+    },
+    "version": "6.4.15.0"
 }
