--- a/.gitlab/lib/scripts.yml
+++ b/.gitlab/lib/scripts.yml
@@ -10,7 +10,7 @@
         - VERSION_DIRS=($NVM_DIR/versions/node/v$NODE_VERSION*)
         - ln -s "${VERSION_DIRS[-1]}/bin/node" /usr/bin/node
         - ln -s "${VERSION_DIRS[-1]}/bin/npm" /usr/bin/npm
-        - ln -s "${VERSION_DIRS[-1]}/bin/npm" /usr/bin/npx
+        - ln -s "${VERSION_DIRS[-1]}/bin/npx" /usr/bin/npx
         - bash -c '\. "$NVM_DIR/nvm.sh" && nvm use $NODE_VERSION'
         - npm config set --global user 0
         - npm config set --global unsafe-perm true
