NEXT-23120 - Add pipeline id to e2e retry log

--- a/.gitlab/stages/30-e2e.yml
+++ b/.gitlab/stages/30-e2e.yml
@@ -19,6 +19,7 @@ E2E:
         CYPRESS_TARGET_BRANCH: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME
         CYPRESS_TARGET_COMMIT: $CI_MERGE_REQUEST_DIFF_BASE_SHA
         CYPRESS_COMMIT_BRANCH: $CI_COMMIT_BRANCH
+        CYPRESS_PIPELINE_ID: $CI_PIPELINE_ID
         CYPRESS_CACHE_FOLDER: $CI_PROJECT_DIR/.Cypress
         CYPRESS_grepTags: '-quarantined'
         RUNNER_INSTANCE_TYPE: 'm5.large'
