NEXT-22988 - Improve mailer settings error handling

--- a/src/Administration/Resources/app/administration/tsconfig.json
+++ b/src/Administration/Resources/app/administration/tsconfig.json
@@ -100,4 +100,5 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "include": ["./src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
