NEXT-23137 - fix swGetAttributeTest unit test

--- a/composer.json
+++ b/composer.json
@@ -411,7 +411,8 @@
     "autoload": {
         "files":[
             "src/Core/Framework/Adapter/Doctrine/Patch/AbstractAsset.php",
-            "src/Core/Framework/Adapter/Twig/functions.php"
+            "src/Core/Framework/Adapter/Twig/functions.php",
+            "vendor/twig/twig/src/Extension/CoreExtension.php"
         ],
         "psr-4": {
             "Shopware\\Administration\\": "src/Administration/",
