NEXT-23312 - Prepare 6.4.16.0 release

--- a/composer.json
+++ b/composer.json
@@ -445,5 +445,6 @@
             "Shopware\\Tests\\Bench\\": "tests/performance/bench/",
             "Shopware\\Tests\\Migration\\": "tests/migration/"
         }
-    }
+    },
+    "version": "6.4.16.0"
 }
