--- a/.gitlab/stages/21-security.yml
+++ b/.gitlab/stages/21-security.yml
@@ -4,6 +4,8 @@ Symfony security check:
     extends: .long-running
     stage: unit
     needs: []
+    # Reactivate after NEXT-23464
+    allow_failure: true
     image: shopware/development:7.4-composer-2
     before_script: []
     script:
