--- a/vendor-bin/roave-backward-compatibility-check/composer.json
+++ b/vendor-bin/roave-backward-compatibility-check/composer.json
@@ -1,6 +1,7 @@
 {
     "require-dev": {
-        "roave/backward-compatibility-check": "^5.0",
+        "roave/backward-compatibility-check": "^7.0",
+        "symplify/vendor-patches": "^11.1",
         "phpunit/phpunit": "^9.5"
     },
     "bin": [
@@ -18,7 +19,7 @@
     },
     "config": {
         "platform": {
-            "php": "7.4.26"
+            "php": "8.0.12"
         },
         "allow-plugins": {
             "ocramius/package-versions": true,
@@ -28,7 +29,7 @@
     "require": {
         "cweagans/composer-patches": "^1.7",
         "doctrine/annotations": "^1.13",
-        "phpdocumentor/type-resolver": "1.x-dev#370845d924dfd2610c67c502efeb0963c0556038"
+        "phpdocumentor/reflection-docblock": "^5.3.0"
     },
     "extra": {
         "patches": {
