NEXT-19739 - Add changelog

--- a/vendor-bin/roave-backward-compatibility-check/composer.json
+++ b/vendor-bin/roave-backward-compatibility-check/composer.json
@@ -19,7 +19,9 @@
     },
     "config": {
         "platform": {
-            "php": "8.0.12"
+            "php": "8.0.12",
+            "ext-bcmath": "8.0.12",
+            "composer-runtime-api": "2.2.0"
         },
         "allow-plugins": {
             "ocramius/package-versions": true,
