ci: Change paths to run php linting
for pull requests on Github and in the Gitlab pipeline

--- a/.github/workflows/01-php-lint.yml
+++ b/.github/workflows/01-php-lint.yml
@@ -5,6 +5,11 @@ on:
       branches:
           - trunk
     pull_request:
+      paths:
+        - composer.json
+        - 'changelog/**/*.md'
+        - 'src/**/snippet/**/*.json'
+        - '**.php'
 
 jobs:
   build:
