--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -33,7 +33,7 @@ tasks:
       ./bin/console sales-channel:update:domain $(gp url 8000 | awk -F[/:] '{print $4}')
       
       # Start Webserver
-      symfony server:start --port 8000 -d{print $4}') && symfony server:start --port 8000
+      symfony server:start --port 8000
   - name: Getting Started
     command: |
       echo 'Hey!. Your environment is starting soon. You can see the progress in the Shopware Terminal'
