--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -87,7 +87,7 @@
         <!--To see the full stackTrace of a Deprecation set the value to a regex matching the deprecation warning-->
         <!--https://symfony.com/doc/current/components/phpunit_bridge.html#display-the-full-stack-trace-->
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="ignoreFile=./deprecation.ignore" />
-<!--        <env name="SYMFONY_DEPRECATIONS_HELPER" value="/substr_count/" />-->
+        <!-- <env name="SYMFONY_DEPRECATIONS_HELPER" value="/.*/" />-->
     </php>
     <testsuites>
         <testsuite name="administration">
