NEXT-13918 - Fix deprecations in migration, storefront and integration suites

--- a/.gitlab/stages/20-unit.yml
+++ b/.gitlab/stages/20-unit.yml
@@ -288,6 +288,8 @@ PHP Full:
         - >
             if [ "$PREFER_LOWEST" == "true" ]; then
                 composer update --prefer-lowest --optimize-autoloader
+                # disable symfony deprecation check, when running with lowest dependency versions
+                export SYMFONY_DEPRECATIONS_HELPER=disabled
             fi
         - >
             if [ "$ONLY_CORE" == "true" ]; then
