--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -27,6 +27,7 @@ ecs.php                                                         @product/enginee
 phpstan.neon                                                    @product/engineering/platform-group/core
 phpunit.xml.dist                                                @product/engineering/platform-group/core
 .bc-exclude.php                                                 @product/engineering/platform-group/core
+deprecation.ignore                                              @product/engineering/platform-group/core
 /src/Core/Framework/Resources/config/packages/shopware.yaml     @product/engineering/platform-group/core
 /src/Core/Framework/Resources/**/feature.yaml
 # shared code ownership of multiple groups seems only to work for the last entries
