--- a/composer.json
+++ b/composer.json
@@ -158,7 +158,7 @@
         "brianium/paratest": "^6.2",
         "dg/bypass-finals": "^1.3",
         "dms/phpunit-arraysubset-asserts": "^0.2.1",
-        "fakerphp/faker": "~1.14.1",
+        "fakerphp/faker": "^1.20",
         "johnkary/phpunit-speedtrap": "~4.0.0",
         "league/construct-finder": "^1.1",
         "maltyxx/images-generator": "~1.0.0",
