--- a/src/Administration/Resources/app/administration/package.json
+++ b/src/Administration/Resources/app/administration/package.json
@@ -18,6 +18,7 @@
     "postinstall": "patch-package",
     "dev": "mode=development webpack-dev-server",
     "build": "mode=production webpack",
+    "create-test": "node src/scripts/create-spec-file/index.mjs",
     "unit": "jest --config jest.config.js --ci",
     "unit-watch": "jest --config jest.config.js --watch",
     "test-debug": "node --inspect-brk TZ=UTC node_modules/.bin/jest --watch --config jest.config.js --runInBand --no-cache",
@@ -155,11 +156,11 @@
     "html-webpack-plugin": "4.5.2",
     "http-proxy-middleware": "0.19.2",
     "inject-loader": "4.0.1",
-    "jsdom": "16.4.0",
     "jest": "27.5.1",
     "jest-fail-on-console": "3.0.1",
     "jest-junit": "14.0.1",
     "jsdoc": "3.6.10",
+    "jsdom": "16.4.0",
     "launch-editor-middleware": "2.3.0",
     "less": "3.9.0",
     "less-loader": "5.0.0",
