--- a/.github/workflows/03-e2e.yml
+++ b/.github/workflows/03-e2e.yml
@@ -14,10 +14,10 @@ jobs:
         strategy:
             matrix:
                 test-directory:
-                    - "cypress/integration/administration/settings/**/*"
-                    - "cypress/integration/administration/catalogue/**/*,cypress/integration/administration/media-marketing/**/*,cypress/integration/administration/customer/**/*"
-                    - "cypress/integration/administration/content/**/*,cypress/integration/administration/general/**/*,cypress/integration/administration/order/**/*,cypress/integration/administration/rule-product-stream/**/*"
-                    - "cypress/integration/storefront/**/*"
+                    - "cypress/e2e/administration/settings/**/*"
+                    - "cypress/e2e/administration/catalogue/**/*,cypress/e2e/administration/media-marketing/**/*,cypress/e2e/administration/customer/**/*"
+                    - "cypress/e2e/administration/content/**/*,cypress/e2e/administration/general/**/*,cypress/e2e/administration/order/**/*,cypress/e2e/administration/rule-product-stream/**/*"
+                    - "cypress/e2e/storefront/**/*"
         env:
             SHOPWARE_HTTP_CACHE_ENABLED: 0
             APP_ENV: e2e
