--- a/.github/workflows/01-lint-admin.yml
+++ b/.github/workflows/01-lint-admin.yml
@@ -11,13 +11,16 @@ on:
 jobs:
   check:
     runs-on: ubuntu-latest
-    container: shopware/development:8.1-composer-2
     env:
       PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: 'true'
 
     steps:
       - name: Clone platform
         uses: actions/checkout@v2
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
 
       - name: NPM Setup
         run: |
